# infiniti-real2d-service

./: .gitignore  README.md  pyproject.toml
real2d_service/: __init__.py  app.py  protocol.py  renderer.py
scripts/: setup-real2d-venv.sh  start-real2d-renderer.sh
tools/: real2d-smoke-test.py
